--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="Bill">Bill</string>
     <string name="city">Enter City</string>
     <string name="add">Add</string>
+    <string name="selectitem">Select Item</string>
     <string-array name="food_item">
         <item name="samosa">Samosa</item>
         <item name="cheese">Cheese</item>
