--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="city">Enter City</string>
     <string name="add">Add</string>
     <string name="selectitem">Select Item</string>
+    <string name="Update">Update</string>
+    <string name="name">Item Name</string>
     <string-array name="food_item">
         <item name="samosa">Samosa</item>
         <item name="cheese">Cheese</item>
